# services/userProfile/controllers/profile.controller.ts
@@ -1,26 +1,20 @@
 import { Response, Request, NextFunction } from 'express';
 import AppError from '../errorHandler/AppError';
 import { catchAsync } from '../errorHandler/catchAsync';
+import { IUser } from '../interfaces/profile.interface';
 import {
     checkAuth,
     createUserProfile,
     deleteUserProfile,
+    findUserData,
+    getUserData,
     getUserProfile,
+    searchUserProfile,
     updateUserProfile,
 } from '../services/profile.services';
 
 export const createProfile = catchAsync(async (req: Request, res: Response, next: NextFunction) => {
-    const token = req.headers.authorization;
-    const uid = await checkAuth(token);
-
-    const userProfile = await getUserProfile(uid);
-
-    if (userProfile) {
-        return next(new AppError('User Profile has already exist', 400, 'already-exist'));
-    }
-
     const newProfile = {
-        uid,
         ...req.body,
     };
     const _newProfile = await createUserProfile(newProfile);
@@ -36,7 +30,11 @@ export const getProfileById = catchAsync(async (req: Request, res: Response, nex
         return next(new AppError(`User Profile with id ${profileId} not found`, 404, 'not-found'));
     }
 
-    return res.status(200).json({ message: 'OK', data: userProfile, status: 200 });
+    const userData = await getUserData(profileId);
+
+    const _userProfile = { ...userProfile, ...userData };
+
+    return res.status(200).json({ message: 'OK', data: _userProfile, status: 200 });
 });
 
 export const getMyProfile = catchAsync(async (req: Request, res: Response, next: NextFunction) => {
@@ -49,7 +47,10 @@ export const getMyProfile = catchAsync(async (req: Request, res: Response, next:
         return next(new AppError(`Your profile not found`, 404, 'not-found'));
     }
 
-    return res.status(200).json({ message: 'OK', data: userProfile, status: 200 });
+    const user = await getUserData(uid);
+
+    const _userProfile = { ...userProfile, user };
+    return res.status(200).json({ message: 'OK', data: _userProfile, status: 200 });
 });
 
 export const updateProfile = catchAsync(async (req: Request, res: Response, next: NextFunction) => {
@@ -85,4 +86,8 @@ export const deleteProfile = catchAsync(async (req: Request, res: Response, next
     return res.status(200).json({ message: 'User profile deleted successfully', data: userProfile, status: 200 });
 });
 
-export const searchUser = catchAsync(async (req: Request, res: Response) => {});
+export const searchUser = catchAsync(async (req: Request, res: Response, next: NextFunction) => {
+    const { keyword } = req.params;
+    const userProfile = await searchUserProfile(keyword);
+    return res.status(200).json({ message: 'OK', data: userProfile, status: 200 });
+});
