# services/userProfile/docs/userprofile-swagger.yaml
@@ -47,13 +47,6 @@ paths:
       description: "update your profile"
       tags:
         - "UserProfile"
-      parameters:
-      - in: path
-        required: true
-        name: profileId
-        schema:
-          type: string
-        description: update your profile  
       security:
         - bearerAuth: []
       requestBody:
@@ -75,14 +68,7 @@ paths:
         500:
           description: "Server Error"
     delete:
-      description: "Delete user profile by id"
-      parameters:
-      - in: path
-        required: true
-        name: profileId
-        schema:
-          type: string
-        description: Get user profile detail by id  
+      description: "Delete Your Profile"
       security:
         - bearerAuth: []
       tags:
@@ -91,7 +77,7 @@ paths:
         200:
           description: "OK"
         404:
-          description: "Product not found"
+          description: "User profile not found"
         500:
           description: "Server Error"
   /user-profile/{profileId}:
@@ -113,17 +99,30 @@ paths:
           description: "User profile not found"
         500:
           description: "Server Error"
+  /user-profile/search/{keyword}:
+    get:
+      description: "Search User Profile By Facebook ID, Name, Email, and Phone Number"
+      parameters:
+        - in: path
+          required: true
+          name: keyword
+          schema:
+            type: string
+          description: Search User Profile By Facebook ID, Name, Email, and Phone Number
+      tags:
+        - "UserProfile"
+      responses:
+        200:
+          description: "OK"
+        404:
+          description: "User profile not found"
+        500:
+          description: "Server Error"
 components:
   schemas:
     UserProfile:
       type: object
       properties:
-        firstName:
-          type: string
-          example: "Yoshi"
-        lastName:
-          type: string
-          example: "Nakamura"
         address:
           type: string
           example: "Mataram"
